--- a/org/Pyrotechniques.org
+++ b/org/Pyrotechniques.org
@@ -61,19 +61,20 @@ minimum required versions and URLs from which they may be downloaded.
 
 * Fire Spread Functions
 
-#+begin_src python
+#+begin_src python :tangle ../src/pyrotechniques/lazy_array.py
 import numpy as np
 
-#=======================================================
+#==============================================================
 # Lazy-Loading Multi-Resolution Array Lookup Functions
-#=======================================================
+#==============================================================
 
 def translate_coords_2d(coords_2d, simulation_shape_2d, layer_shape_2d, chunk_shape_2d):
     """
     Given row y and column x on the simulation grid, return chunk
-    row cy, chunk column cx, subchunk row c_y, and subchunk row c_x on
+    row cy, chunk column cx, subchunk row c_y, and subchunk column c_x on
     the chunk grid.
-    NOTE: simulation_shape_2d must not be lower resolution than layer_shape_2d.
+    NOTE: (y,x) = (0,0) is the upper-left corner of the array.
+    NOTE: simulation_shape_2d >= layer_shape_2d >= chunk_shape_2d
     """
     (y, x) = coords_2d
     (simulation_rows, simulation_cols) = simulation_shape_2d
@@ -91,8 +92,9 @@ def translate_coords_3d(coords_3d, simulation_shape_3d, layer_shape_3d, chunk_sh
     """
     Given band z, row y, and column x on the simulation grid,
     return chunk band cz, chunk row cy, chunk column cx, subchunk band
-    c_z, subchunk row c_y, and subchunk row c_x on the chunk grid.
-    NOTE: simulation_shape_3d must not be lower resolution than layer_shape_3d.
+    c_z, subchunk row c_y, and subchunk column c_x on the chunk grid.
+    NOTE: (z,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
+    NOTE: simulation_shape_3d >= layer_shape_3d >= chunk_shape_3d
     """
     (z, y, x) = coords_3d
     (simulation_bands, simulation_rows, simulation_cols) = simulation_shape_3d
@@ -109,102 +111,122 @@ def translate_coords_3d(coords_3d, simulation_shape_3d, layer_shape_3d, chunk_sh
     c_x = lx % chunk_cols
     return (cz, cy, cx, c_z, c_y, c_x)
 
-def get_or_load_chunk_2d(chunked_layer_2d, cy, cx, load_chunk_2d):
+def get_or_load_chunk_2d(chunk_cache_2d, cy, cx, load_chunk_2d):
     """
+    Checks whether chunk_cache_2d contains chunk (cy, cx). If so,
+    return it. Otherwise, call load_chunk_2d(cy, cx) to retrieve it,
+    store it in chunk_cache_2d, and return it.
     """
-    chunk_2d = chunked_layer_2d[cy, cx]
+    chunk_2d = chunk_cache_2d[cy, cx]
     if (type(chunk_2d) == np.ndarray):
         return chunk_2d
     else:
         chunk_2d = load_chunk_2d(cy, cx)
-        chunked_layer_2d[cy, cx] = chunk_2d
+        chunk_cache_2d[cy, cx] = chunk_2d
         return chunk_2d
 
-def get_or_load_chunk_3d(chunked_layer_3d, cz, cy, cx, load_chunk_3d):
+def get_or_load_chunk_3d(chunk_cache_3d, cz, cy, cx, load_chunk_3d):
     """
+    Checks whether chunk_cache_3d contains chunk (cz, cy, cx). If so,
+    return it. Otherwise, call load_chunk_3d(cz, cy, cx) to retrieve it,
+    store it in chunk_cache_3d, and return it.
     """
-    chunk_3d = chunked_layer_3d[cz, cy, cx]
+    chunk_3d = chunk_cache_3d[cz, cy, cx]
     if (type(chunk_3d) == np.ndarray):
         return chunk_3d
     else:
         chunk_3d = load_chunk_3d(cz, cy, cx)
-        chunked_layer_3d[cz, cy, cx] = chunk_3d
+        chunk_cache_3d[cz, cy, cx] = chunk_3d
         return chunk_3d
 
-def at_coords_2d(coords_2d, simulation_shape_2d, layer_shape_2d, chunk_shape_2d, chunked_layer_2d, load_chunk_2d):
+def at_coords_2d(coords_2d, simulation_shape_2d, layer_shape_2d, chunk_shape_2d, chunk_cache_2d, load_chunk_2d):
     """
     Given row y and column x on the simulation grid, return the
-    value at that index in the underlying chunked layer.
+    value at that index in the underlying chunk cache.
+    NOTE: (y,x) = (0,0) is the upper-left corner of the array.
     """
     (cy, cx, c_y, c_x) = translate_coords_2d(coords_2d, simulation_shape_2d, layer_shape_2d, chunk_shape_2d)
-    chunk_2d = get_or_load_chunk_2d(chunked_layer_2d, cy, cx, load_chunk_2d)
+    chunk_2d = get_or_load_chunk_2d(chunk_cache_2d, cy, cx, load_chunk_2d)
     return chunk_2d[c_y, c_x]
 
-def at_coords_3d(coords_3d, simulation_shape_3d, layer_shape_3d, chunk_shape_3d, chunked_layer_3d, load_chunk_3d):
+def at_coords_3d(coords_3d, simulation_shape_3d, layer_shape_3d, chunk_shape_3d, chunk_cache_3d, load_chunk_3d):
     """
     Given band z, row y, and column x on the simulation grid,
-    return the value at that index in the underlying chunked layer.
+    return the value at that index in the underlying chunk cache.
+    NOTE: (z,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
     """
     (cz, cy, cx, c_z, c_y, c_x) = translate_coords_3d(coords_3d, simulation_shape_3d, layer_shape_3d, chunk_shape_3d)
-    chunk_3d = get_or_load_chunk_3d(chunked_layer_3d, cz, cy, cx, load_chunk_3d)
+    chunk_3d = get_or_load_chunk_3d(chunk_cache_3d, cz, cy, cx, load_chunk_3d)
     return chunk_3d[c_z, c_y, c_x]
 
-def make_at_coords_2d(simulation_shape_2d, layer_shape_2d, chunk_shape_2d, load_chunk_2d):
+#==============================================================
+# Constructor: Returns a 2D/3D Lookup Function for One Array
+#==============================================================
+
+def make_lookup_fn_2d(simulation_shape_2d, layer_shape_2d, chunk_shape_2d, load_chunk_2d):
     """
+    Given the array shapes of the simulation space (|Y|,|X|), the
+    underlying data layer (|LY|,|LX|), and a single chunk within the
+    chunk cache (|CY|,|CX|) as well as a function to load one chunk
+    on demand, return a closure that will retrieve the value from the
+    underlying data layer corresponding to coordinate (y,x) in the
+    simulation space. Chunks will be loaded on demand using load_chunk_2d.
+    NOTE: (y,x) = (0,0) is the upper-left corner of the array.
     NOTE: simulation_shape_2d >= layer_shape_2d >= chunk_shape_2d
     """
     (layer_rows, layer_cols) = layer_shape_2d
     (chunk_rows, chunk_cols) = chunk_shape_2d
-    chunked_layer_2d = np.empty((layer_rows // chunk_rows,
-                                 layer_cols // chunk_cols),
-                                dtype=object)
+    chunk_cache_2d = np.empty((layer_rows // chunk_rows,
+                               layer_cols // chunk_cols),
+                              dtype=object)
     return lambda y, x: at_coords_2d((y, x),
                                      simulation_shape_2d,
                                      layer_shape_2d,
                                      chunk_shape_2d,
-                                     chunked_layer_2d,
+                                     chunk_cache_2d,
                                      load_chunk_2d)
 
-def make_at_coords_3d(simulation_shape_3d, layer_shape_3d, chunk_shape_3d, load_chunk_3d):
+def make_lookup_fn_3d(simulation_shape_3d, layer_shape_3d, chunk_shape_3d, load_chunk_3d):
     """
+    Given the array shapes of the simulation space (|Z|,|Y|,|X|), the
+    underlying data layer (|LZ|,|LY|,|LX|), and a single chunk within the
+    chunk cache (|CZ|,|CY|,|CX|) as well as a function to load one chunk
+    on demand, return a closure that will retrieve the value from the
+    underlying data layer corresponding to coordinate (z,y,x) in the
+    simulation space. Chunks will be loaded on demand using load_chunk_3d.
+    NOTE: (z,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
     NOTE: simulation_shape_3d >= layer_shape_3d >= chunk_shape_3d
     """
     (layer_bands, layer_rows, layer_cols) = layer_shape_3d
     (chunk_bands, chunk_rows, chunk_cols) = chunk_shape_3d
-    chunked_layer_3d = np.empty((layer_bands // chunk_bands,
-                                 layer_rows // chunk_rows,
-                                 layer_cols // chunk_cols),
-                                dtype=object)
+    chunk_cache_3d = np.empty((layer_bands // chunk_bands,
+                               layer_rows // chunk_rows,
+                               layer_cols // chunk_cols),
+                              dtype=object)
     return lambda z, y, x: at_coords_3d((z, y, x),
                                         simulation_shape_3d,
                                         layer_shape_3d,
                                         chunk_shape_3d,
-                                        chunked_layer_3d,
+                                        chunk_cache_3d,
                                         load_chunk_3d)
+#+end_src
 
-def make_load_chunk_2d(layer_2d, chunk_shape_2d):
-    (chunk_rows, chunk_cols) = chunk_shape_2d
-    return lambda cy, cx: layer_2d[cy * chunk_rows : (cy + 1) * chunk_rows,
-                                   cx * chunk_cols : (cx + 1) * chunk_cols]
+#+begin_src python :tangle ../test/pyrotechniques/lazy_array_test.py
+import numpy as np
+from pyrotechniques.lazy_array import make_lookup_fn_2d, make_lookup_fn_3d
 
-def make_load_chunk_3d(layer_3d, chunk_shape_3d):
-    (chunk_bands, chunk_rows, chunk_cols) = chunk_shape_3d
-    return lambda cz, cy, cx: layer_3d[cz * chunk_bands : (cz + 1) * chunk_bands,
-                                       cy * chunk_rows  : (cy + 1) * chunk_rows,
-                                       cx * chunk_cols  : (cx + 1) * chunk_cols]
-
-#=======================================================
+#==============================================================
 # Raw Data - managed by the caller
-#=======================================================
+#==============================================================
 
 # 2D Arrays (e.g. 30m x 30m resolution, 30km x 30km extent)
 elevation_layer           = np.arange(0,1000000).reshape(1000,1000)
 slope_layer               = np.arange(0,1000000).reshape(1000,1000)
 aspect_layer              = np.arange(0,1000000).reshape(1000,1000)
 fuel_model_layer          = np.arange(0,1000000).reshape(1000,1000)
+canopy_cover_layer        = np.arange(0,1000000).reshape(1000,1000)
 canopy_height_layer       = np.arange(0,1000000).reshape(1000,1000)
 canopy_base_height_layer  = np.arange(0,1000000).reshape(1000,1000)
-canopy_cover_layer        = np.arange(0,1000000).reshape(1000,1000)
 canopy_bulk_density_layer = np.arange(0,1000000).reshape(1000,1000)
 
 # 3D Arrays (e.g. 1hr x 300m x 300m resolution, 1day x 30km x 30km extent)
@@ -218,54 +240,117 @@ fuel_moisture_dead_100hr_layer      = np.arange(240000).reshape(24,100,100)
 fuel_moisture_live_herbaceous_layer = np.arange(240000).reshape(24,100,100)
 fuel_moisture_live_woody_layer      = np.arange(240000).reshape(24,100,100)
 
-#=======================================================
-# Layers Dictionary
-#=======================================================
+#==============================================================
+# Chunk Loading Functions
+#==============================================================
 
-layers_dict = {
+def make_load_chunk_2d(layer_2d, chunk_shape_2d):
+    """
+    Example 2D chunk loading function. Since we are calling the
+    lazy array functions from Python and they will be used as
+    read-only data by the caller, we can just provide a sliced view of
+    the underlying array rather than generating a copy.
+    """
+    (chunk_rows, chunk_cols) = chunk_shape_2d
+    return lambda cy, cx: layer_2d[cy * chunk_rows : (cy + 1) * chunk_rows,
+                                   cx * chunk_cols : (cx + 1) * chunk_cols]
+
+def make_load_chunk_3d(layer_3d, chunk_shape_3d):
+    """
+    Example 3D chunk loading function. Since we are calling the
+    lazy array functions from Python and they will be used as
+    read-only data by the caller, we can just provide a sliced view of
+    the underlying array rather than generating a copy.
+    """
+    (chunk_bands, chunk_rows, chunk_cols) = chunk_shape_3d
+    return lambda cz, cy, cx: layer_3d[cz * chunk_bands : (cz + 1) * chunk_bands,
+                                       cy * chunk_rows  : (cy + 1) * chunk_rows,
+                                       cx * chunk_cols  : (cx + 1) * chunk_cols]
+
+#==============================================================
+# Creating the Dictionary of Layer Names to Lookup Functions
+#==============================================================
+
+#                      bands, rows, cols
+simulation_shape_2d = (       1000, 1000)
+layer_shape_2d      = (       1000, 1000)
+chunk_shape_2d      = (        100,  100)
+
+simulation_shape_3d = (   24, 1000, 1000)
+layer_shape_3d      = (   24,  100,  100)
+chunk_shape_3d      = (    1,   10,   10)
+
+# Partial Application Functions
+def make_lookup_fn_2d_for_layer(layer_2d):
+    make_lookup_fn_2d(simulation_shape_2d,
+                      layer_shape_2d,
+                      chunk_shape_2d,
+                      make_load_chunk_2d(layer_2d, chunk_shape_2d))
+
+def make_lookup_fn_3d_for_layer(layer_3d):
+    make_lookup_fn_3d(simulation_shape_3d,
+                      layer_shape_3d,
+                      chunk_shape_3d,
+                      make_load_chunk_3d(layer_3d, chunk_shape_3d))
+
+# Layer Dictionary
+layer_lookup = {
     # 2D Arrays (e.g. 30m x 30m resolution, 30km x 30km extent)
-    "elevation"          : make_at_coords_2d((1000,1000), (1000,1000), (100,100),
-                                             make_load_chunk_2d(elevation_layer, (100,100))),
-    "slope"              : make_at_coords_2d((1000,1000), (1000,1000), (100,100),
-                                             make_load_chunk_2d(slope_layer, (100,100))),
-    "aspect"             : make_at_coords_2d((1000,1000), (1000,1000), (100,100),
-                                             make_load_chunk_2d(aspect_layer, (100,100))),
-    "fuel_model"         : make_at_coords_2d((1000,1000), (1000,1000), (100,100),
-                                             make_load_chunk_2d(fuel_model_layer, (100,100))),
-    "canopy_height"      : make_at_coords_2d((1000,1000), (1000,1000), (100,100),
-                                             make_load_chunk_2d(canopy_height_layer, (100,100))),
-    "canopy_base_height" : make_at_coords_2d((1000,1000), (1000,1000), (100,100),
-                                             make_load_chunk_2d(canopy_base_height_layer, (100,100))),
-    "canopy_cover"       : make_at_coords_2d((1000,1000), (1000,1000), (100,100),
-                                             make_load_chunk_2d(canopy_cover_layer, (100,100))),
-    "canopy_bulk_density": make_at_coords_2d((1000,1000), (1000,1000), (100,100),
-                                             make_load_chunk_2d(canopy_bulk_density_layer, (100,100))),
+    "elevation"          : make_lookup_fn_2d_for_layer(elevation_layer),
+    "slope"              : make_lookup_fn_2d_for_layer(slope_layer),
+    "aspect"             : make_lookup_fn_2d_for_layer(aspect_layer),
+    "fuel_model"         : make_lookup_fn_2d_for_layer(fuel_model_layer),
+    "canopy_cover"       : make_lookup_fn_2d_for_layer(canopy_cover_layer),
+    "canopy_height"      : make_lookup_fn_2d_for_layer(canopy_height_layer),
+    "canopy_base_height" : make_lookup_fn_2d_for_layer(canopy_base_height_layer),
+    "canopy_bulk_density": make_lookup_fn_2d_for_layer(canopy_bulk_density_layer),
 
     # 3D Arrays (e.g. 1hr x 300m x 300m resolution, 1day x 30km x 30km extent)
-    "temperature"                  : make_at_coords_3d((24,1000,1000), (24,100,100), (1,10,10),
-                                                       make_load_chunk_3d(temperature_layer, (1,10,10))),
-    "relative_humidity"            : make_at_coords_3d((24,1000,1000), (24,100,100), (1,10,10),
-                                                       make_load_chunk_3d(relative_humidity_layer, (1,10,10))),
-    "wind_speed"                   : make_at_coords_3d((24,1000,1000), (24,100,100), (1,10,10),
-                                                       make_load_chunk_3d(wind_speed_layer, (1,10,10))),
-    "wind_direction"               : make_at_coords_3d((24,1000,1000), (24,100,100), (1,10,10),
-                                                       make_load_chunk_3d(wind_direction_layer, (1,10,10))),
-    "fuel_moisture_dead_1hr"       : make_at_coords_3d((24,1000,1000), (24,100,100), (1,10,10),
-                                                       make_load_chunk_3d(fuel_moisture_dead_1hr_layer, (1,10,10))),
-    "fuel_moisture_dead_10hr"      : make_at_coords_3d((24,1000,1000), (24,100,100), (1,10,10),
-                                                       make_load_chunk_3d(fuel_moisture_dead_10hr_layer, (1,10,10))),
-    "fuel_moisture_dead_100hr"     : make_at_coords_3d((24,1000,1000), (24,100,100), (1,10,10),
-                                                       make_load_chunk_3d(fuel_moisture_dead_100hr_layer, (1,10,10))),
-    "fuel_moisture_live_herbaceous": make_at_coords_3d((24,1000,1000), (24,100,100), (1,10,10),
-                                                       make_load_chunk_3d(fuel_moisture_live_herbaceous_layer, (1,10,10))),
-    "fuel_moisture_live_woody"     : make_at_coords_3d((24,1000,1000), (24,100,100), (1,10,10),
-                                                       make_load_chunk_3d(fuel_moisture_live_woody_layer, (1,10,10))),
+    "temperature"                  : make_lookup_fn_3d_for_layer(temperature_layer),
+    "relative_humidity"            : make_lookup_fn_3d_for_layer(relative_humidity_layer),
+    "wind_speed"                   : make_lookup_fn_3d_for_layer(wind_speed_layer),
+    "wind_direction"               : make_lookup_fn_3d_for_layer(wind_direction_layer),
+    "fuel_moisture_dead_1hr"       : make_lookup_fn_3d_for_layer(fuel_moisture_dead_1hr_layer),
+    "fuel_moisture_dead_10hr"      : make_lookup_fn_3d_for_layer(fuel_moisture_dead_10hr_layer),
+    "fuel_moisture_dead_100hr"     : make_lookup_fn_3d_for_layer(fuel_moisture_dead_100hr_layer),
+    "fuel_moisture_live_herbaceous": make_lookup_fn_3d_for_layer(fuel_moisture_live_herbaceous_layer),
+    "fuel_moisture_live_woody"     : make_lookup_fn_3d_for_layer(fuel_moisture_live_woody_layer),
 }
 
-#=======================================================
-# Fire Spread Functions
-#=======================================================
+#==============================================================
+# Looking Up Values in the Layers
+#==============================================================
 
+# NOTE: 2D coords should be provided as (y,x) in simulation space.
+
+dem_100_100  = layer_lookup["elevation"](100,100)
+slp_100_100  = layer_lookup["slope"](100,100)
+asp_100_100  = layer_lookup["aspect"](100,100)
+fbfm_100_100 = layer_lookup["fuel_model"](100,100)
+cc_100_100   = layer_lookup["canopy_cover"](100,100)
+ch_100_100   = layer_lookup["canopy_height"](100,100)
+cbh_100_100  = layer_lookup["canopy_base_height"](100,100)
+cbd_100_100  = layer_lookup["canopy_bulk_density"](100,100)
+
+# NOTE: 3D coords should be provided as (z,y,x) in simulation space.
+
+temp_12_100_100  = layer_lookup["temperature"](12,100,100)
+rh_12_100_100    = layer_lookup["relative_humidity"](12,100,100)
+wsp_12_100_100   = layer_lookup["wind_speed"](12,100,100)
+wd_12_100_100    = layer_lookup["wind_direction"](12,100,100)
+md1_12_100_100   = layer_lookup["fuel_moisture_dead_1hr"](12,100,100)
+md10_12_100_100  = layer_lookup["fuel_moisture_dead_10hr"](12,100,100)
+md100_12_100_100 = layer_lookup["fuel_moisture_dead_100hr"](12,100,100)
+mlh_12_100_100   = layer_lookup["fuel_moisture_live_herbaceous"](12,100,100)
+mlw_12_100_100   = layer_lookup["fuel_moisture_live_woody"](12,100,100)
+#+end_src
+
+#+begin_src python :tangle ../src/pyrotechniques/fire_spread.py
+#==============================================================
+# Fire Spread Functions
+#==============================================================
+
+# FIXME: stub
 def burn_cells(layer_dict, ignited_cells_set, outputs_list):
     """
     1. Load data for the ignited area without a buffer
@@ -274,6 +359,7 @@ def burn_cells(layer_dict, ignited_cells_set, outputs_list):
     """
     return None
 
+# FIXME: stub
 def spread(layer_dict, ignited_cells_set, outputs_list, stop_condition):
     """
     1. Load data for the ignited area plus a buffer size (user-specified?)
