Splitting up the Org file with outline sections

--- a/org/Pyrotechniques.org
+++ b/org/Pyrotechniques.org
@@ -59,7 +59,8 @@ minimum required versions and URLs from which they may be downloaded.
 | Numpy  | LATEST  | https://numpy.org                 |
 |--------+---------+-----------------------------------|
 
-* Fire Spread Functions
+* Data Model
+** Lazy-Loading Multi-Resolution Array Lookup Functions
 
 #+begin_src python :tangle ../src/pyrotechniques/lazy_array.py
 import numpy as np
@@ -211,6 +212,8 @@ def make_lookup_fn_3d(simulation_shape_3d, layer_shape_3d, chunk_shape_3d, load_
                                         load_chunk_3d)
 #+end_src
 
+** Lazy Array Usage Examples
+
 #+begin_src python :tangle ../test/pyrotechniques/lazy_array_test.py
 import numpy as np
 from pyrotechniques.lazy_array import make_lookup_fn_2d, make_lookup_fn_3d
@@ -344,6 +347,8 @@ md100_12_100_100 = layer_lookup["fuel_moisture_dead_100hr"](12,100,100)
 mlh_12_100_100   = layer_lookup["fuel_moisture_live_herbaceous"](12,100,100)
 mlw_12_100_100   = layer_lookup["fuel_moisture_live_woody"](12,100,100)
 #+end_src
+
+* Fire Spread Functions
 
 #+begin_src python :tangle ../src/pyrotechniques/fire_spread.py
 #==============================================================
