--- a/org/Pyretechnics.org
+++ b/org/Pyretechnics.org
@@ -233,6 +233,7 @@ canopy_base_height_layer           = np.arange(0,1000000).reshape(1000,1000)
 canopy_bulk_density_layer          = np.arange(0,1000000).reshape(1000,1000)
 time_of_arrival_layer              = np.arange(0,1000000).reshape(1000,1000) # Optional Layer
 suppression_difficulty_index_layer = np.arange(0,1000000).reshape(1000,1000) # Optional Layer
+fuel_spread_adjustment_layer       = np.arange(0,1000000).reshape(1000,1000) # Optional Layer
 
 # 3D Arrays (e.g. 1hr x 300m x 300m resolution, 1day x 30km x 30km extent)
 temperature_layer                   = np.arange(240000).reshape(24,100,100)
@@ -244,6 +245,8 @@ fuel_moisture_dead_10hr_layer       = np.arange(240000).reshape(24,100,100)
 fuel_moisture_dead_100hr_layer      = np.arange(240000).reshape(24,100,100)
 fuel_moisture_live_herbaceous_layer = np.arange(240000).reshape(24,100,100)
 fuel_moisture_live_woody_layer      = np.arange(240000).reshape(24,100,100)
+foliar_moisture_layer               = np.arange(240000).reshape(24,100,100)
+weather_spread_adjustment_layer     = np.arange(240000).reshape(24,100,100) # Optional Layer
 
 #==============================================================
 # Chunk Loading Functions
@@ -311,6 +314,7 @@ layer_lookup = {
     "canopy_bulk_density"          : make_lookup_fn_2d_for_layer(canopy_bulk_density_layer),
     "time_of_arrival"              : make_lookup_fn_2d_for_layer(time_of_arrival_layer),              # Optional Layer
     "suppression_difficulty_index" : make_lookup_fn_2d_for_layer(suppression_difficulty_index_layer), # Optional Layer
+    "fuel_spread_adjustment"       : make_lookup_fn_2d_for_layer(fuel_spread_adjustment_layer),       # Optional Layer
 
     # 3D Arrays (e.g. 1hr x 300m x 300m resolution, 1day x 30km x 30km extent)
     "temperature"                  : make_lookup_fn_3d_for_layer(temperature_layer),
@@ -322,6 +326,8 @@ layer_lookup = {
     "fuel_moisture_dead_100hr"     : make_lookup_fn_3d_for_layer(fuel_moisture_dead_100hr_layer),
     "fuel_moisture_live_herbaceous": make_lookup_fn_3d_for_layer(fuel_moisture_live_herbaceous_layer),
     "fuel_moisture_live_woody"     : make_lookup_fn_3d_for_layer(fuel_moisture_live_woody_layer),
+    "foliar_moisture"              : make_lookup_fn_3d_for_layer(foliar_moisture_layer),
+    "weather_spread_adjustment"    : make_lookup_fn_3d_for_layer(weather_spread_adjustment_layer),    # Optional Layer
 }
 
 #==============================================================
@@ -338,8 +344,9 @@ cc_100_100   = layer_lookup["canopy_cover"](100,100)
 ch_100_100   = layer_lookup["canopy_height"](100,100)
 cbh_100_100  = layer_lookup["canopy_base_height"](100,100)
 cbd_100_100  = layer_lookup["canopy_bulk_density"](100,100)
-toa_100_100  = layer_lookup["time_of_arrival"](100,100)
-sdi_100_100  = layer_lookup["suppression_difficulty_index"](100,100)
+toa_100_100  = layer_lookup["time_of_arrival"](100,100)                  # Optional Layer
+sdi_100_100  = layer_lookup["suppression_difficulty_index"](100,100)     # Optional Layer
+fsa_100_100  = layer_lookup["fuel_spread_adjustment"](100,100)           # Optional Layer
 
 # NOTE: 3D coords should be provided as (z,y,x) in simulation space.
 
@@ -352,6 +359,8 @@ md10_12_100_100  = layer_lookup["fuel_moisture_dead_10hr"](12,100,100)
 md100_12_100_100 = layer_lookup["fuel_moisture_dead_100hr"](12,100,100)
 mlh_12_100_100   = layer_lookup["fuel_moisture_live_herbaceous"](12,100,100)
 mlw_12_100_100   = layer_lookup["fuel_moisture_live_woody"](12,100,100)
+fm_12_100_100    = layer_lookup["foliar_moisture"](12,100,100)
+wsa_12_100_100   = layer_lookup["weather_spread_adjustment"](12,100,100) # Optional Layer
 #+end_src
 
 * Fire Spread Functions
@@ -362,22 +371,47 @@ mlw_12_100_100   = layer_lookup["fuel_moisture_live_woody"](12,100,100)
 #==============================================================
 
 # FIXME: stub
-def burn_cells(config_dict, layer_dict, ignited_cells_set, outputs_list):
+# RESUME HERE: [[file:~/code/sig-gis/gridfire/src/gridfire/simulations.clj::(defn run-simulation!]]
+def burn_cells(config_dict, input_layer_dict, output_layer_dict, ignited_cells_set):
     """
     1. Validate inputs
        - Make sure that all required parameters are present in config_dict (like spec-checking config.edn)
-         - simulation-shape (z,y,x)
-         - cell-height
-         - cell-width
-         - RESUME HERE: [[file:~/code/sig-gis/gridfire/src/gridfire/core.clj::inputs/add-misc-params][add-misc-params]]
+         - simulation_shape (z,y,x) = (int bands, int rows, int cols)
+         - simulation_resolution (z,y,x) = (minutes, meters, meters)
+         - simulation_north_angle (default: 0)
+         - simulation_start_time (minute)
+         - simulation_stop_condition (max_burn_duration: mins, max_burned_area: m^2)
+         - random_generator (MUTABLE!)
+         - ellipse_adjustment_factor (not needed by ELMFIRE)
+         - alpha_suppression:
+           - suppression_dt
+           - suppression_coefficient
+         - sdi_suppression:
+           - suppression_dt
+           - sdi_sensitivity_to_difficulty
+           - sdi_containment_overwhelming_area_growth_rate
+           - sdi_reference_suppression_speed
+         - modify_outputs (True, False)
        - Make sure that all required entries are present in layer_dict
-       - Document raster layer units
-         - include metric/imperial units and relevant multipliers
-         - user has to get these right, no checking!
-         - don't forget to remind them about angular corrections to wind and aspect if the projection isn't oriented to due North
-       - Check for entries in layer_dict for output layers; if present, copy/use as new output layers
-       - Use time of arrival raster to identify the burn scar(s); if missing, we are simulating point ignitions
-       - Specify 3D space-time points in ignited_cells_set
+         - Document raster layer units
+           - include metric/imperial units and relevant multipliers
+           - user has to get these right, no checking!
+           - don't forget to remind them about angular corrections to wind and aspect if the projection isn't oriented to due North
+         - Check for entries in output_layer_dict; if present, copy/use as new output layers
+         - Use time of arrival raster to identify the burn scar(s); if missing, we are simulating point ignitions
+       - Specify 3D space-time points in ignited_cells_set = (minute, row, col)
+       - The simulation will return a dictionary with these fields:
+         - simulation_stop_time (minute)
+         - simulation_stop_condition_encountered (max_burn_duration, max_burned_area, no_burnable_fuel, end_of_temporal_data, fully_suppressed)
+         - ignited_cells_set (returning the actively burning cells allows someone to restart the simulation from this point)
+         - output_layer_dict: (should we split up surface and crown matrices or combine them?)
+           - spread_rate_matrix
+           - spread_direction_matrix
+           - flame_length_matrix
+           - fire_line_intensity_matrix
+           - fire_type_matrix
+           - ember_count_matrix
+           - time_of_arrival_matrix
     2. Create input parameter dictionary
        - load rasters
        - load ignitions
